BJS2-52697 Deactivate user. Review changes 2. MentorshipService.stopMentorship() updated; GoalRepository updated; UserController updated. Autowired deleted